chore: enhance log